--- a/template/index.html
+++ b/template/index.html
@@ -594,7 +594,7 @@
               <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-25">Redução de custos</h3>
+                  <h3 class="card-title ml-50">Redução de custos</h3>
                 </div>
               </div>
             </div>
@@ -602,7 +602,7 @@
               <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-25">Aumento de produtividade</h3>
+                  <h3 class="card-title ml-50">Aumento de produtividade</h3>
                 </div>
               </div>
             </div>
@@ -613,7 +613,7 @@
               <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-25">Controle de qualidade</h3>
+                  <h3 class="card-title ml-50">Controle de qualidade</h3>
                 </div>
               </div>
             </div>
@@ -621,7 +621,7 @@
               <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-25">Relatórios detalhados</h3>
+                  <h3 class="card-title ml-50">Relatórios detalhados</h3>
                 </div>
               </div>
             </div>
@@ -632,7 +632,7 @@
               <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-5.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-25">Operação intuitiva</h3>
+                  <h3 class="card-title ml-50">Operação intuitiva</h3>
                 </div>
               </div>
             </div>
@@ -640,7 +640,7 @@
               <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-25 mb-60">Assistência técnica</h3>
+                  <h3 class="card-title ml-50 mb-60">Assistência técnica</h3>
                 </div>
               </div>
             </div>
@@ -719,7 +719,7 @@
                       <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                         <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                         <div class="body">
-                          <h3 class="title ml-25">Sem custos de importação</h3>
+                          <h3 class="card-title ml-25">Sem custos de importação</h3>
                         </div>
                       </div>
                     </div>
@@ -727,7 +727,7 @@
                       <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                         <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                         <div class="body">
-                          <h3 class="title ml-25">Assistência técnica capacitada</h3>
+                          <h3 class="card-title ml-25">Assistência técnica capacitada</h3>
                         </div>
                       </div>
                     </div>
