--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -429,9 +429,9 @@
         <div class="container">
           <div class="row">      
             
-            <div class="col-md-4 mb-40">
+            <div class="col-md-4 mb-20">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
                   <h4 class="title">Controle de qualidade</h4>
                   <p>A calibradora eletrônica identifica e remove os tomates que apresentam defeitos de forma, na casca, e também aqueles com coloração indesejada, garantindo a qualidade dos frutos que serão embalados. A classificação dos saudáveis em até 6 níveis de tamanho garante uma padronização excepcional.</p>
@@ -439,9 +439,9 @@
               </div>
             </div>
 
-            <div class="col-md-4 mb-40">
+            <div class="col-md-4 mb-20">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
                   <h4 class="title">Redução de mão-de-obra</h4>
                   <p>A classificadora eletrônica simplesmente elimina a necessidade da inspeção e separação manual dos produtos, pois a classificação é feita com precisão e consistência. Realoque seus colaboradores para outras fases da produção.</p>
@@ -449,9 +449,9 @@
               </div>
             </div>
 
-            <div class="col-md-4 mb-40">
+            <div class="col-md-4 mb-20">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
                   <h4 class="title">Configuração automática</h4>
                   <p>O critério de classificação da máquina pode ser ajustado a partir de exemplos separados manualmente por você. Capacidade de armazenamento de configurações (ou treinos) ilimitada. Crie treinos para separar seus frutos dos mais variados estágios de desenvolvimento da planta.</p>
@@ -459,9 +459,9 @@
               </div>
             </div>
 
-            <div class="col-md-4 mb-40">
+            <div class="col-md-4 mb-20">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
                   <h4 class="title">Relatórios detalhados</h4>
                   <p>Além dos benefícios de ganho de qualidade e redução de mão-de-obra, as calibradoras eletrônicas da MVisia garantem um maior controle da sua produção através de relatórios de produtividade detalhados (quantidade em cada tamanho, produção diária, semanal, etc).</p>
@@ -469,11 +469,11 @@
               </div>
             </div>
 
-            <div class="col-md-4 mb-40">
+            <div class="col-md-4 mb-20">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
+                <span class="icon default-bg small circle icon-benefit ml-30"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
-                  <h4 class="title">Assistência técnica</h4>
+                  <h3 class="title">Assistência técnica</h3>
                   <p>A MVisia é uma empresa 100% brasileira. Isso significa que além de ser um produto sem os altos custos de importação, também conta com garantia e assistência técnica profissional e capacitada, tanto presencialmente quando pela internet. Respondemos com agilidade as chamadas que são abertas.</p>
                 </div>
               </div>
@@ -485,17 +485,17 @@
       <!-- section end -->
 
       <!-- section start -->
-      <div class="light-gray-bg pv-70 section">
+      <div class="light-gray-bg pv-55 section">
         <div class="container">
-          <h3>Especificações técnicas</h3>
+          <h3 class="title-subsection">Especificações técnicas</h3>
           <div class="separator-2"></div>        
-          <div class="col-md-12 mb-40">
+          <div class="col-md-12">
             <ul>
-              <li><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>É necessário linha de ar comprimido;</li>
-              <li><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
+              <li class="mt-30"><i class="icon-default-green icon-right-open-1"></i>Produtividade de até 600 kg/hora;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Até 6 classificações de tamanho + 1 para defeitos + 1 para tomates verdes;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Alimentação 220 V;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>É necessário linha de ar comprimido;</li>
+              <li class="mt-10"><i class="icon-default-green icon-right-open-1"></i>Dimensões: 6 m (comprimento) x 1 m (largura) x 2 m (altura).</li>
             </ul>
           </div>
         </div>
