--- a/template/page-media.html
+++ b/template/page-media.html
@@ -50,7 +50,7 @@
     <!-- Used font for body: Roboto -->
     <!-- Used font for headings: Raleway -->
     <!-- Use css/rtl_typography-default.css for RTL version -->
-    <link href="css/typography-default.css" rel="stylesheet" >
+    <link href="css/typography.css" rel="stylesheet" >
     <!-- Color Scheme (In order to change the color scheme, replace the blue.css with the color scheme that you prefer)-->
     <link href="css/skins/green.css" rel="stylesheet">
   
@@ -394,7 +394,7 @@
                   <div class="body">
                     <h4 class="card-title margin-clear">Fernando Velloso</h4>
                     <h6 class="mt-10">Engenharia Mecatrônica<br> (POLI-USP)</h6>
-                    <div class="separator mt-10"></div>
+                    <div class="separator mt-10 separator-custom"></div>
                     <ul class="social-links circle colored margin-clear">
                       <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/fernando-velloso-672934102/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
