--- a/template/css/style.css
+++ b/template/css/style.css
@@ -163,11 +163,7 @@ ul {
 }
 
 .main-container {
-  padding: 80px 0;
-}
-
-.block {
-  margin-bottom: 50px;
+  padding: 60px 0;
 }
 
 .section {
@@ -862,10 +858,6 @@ h5 + .separator {
   padding-left: 20px;
 }
 
-.pr-5 {
-  padding-right: 5px;
-}
-
 .pr-10 {
   padding-right: 10px;
 }
@@ -889,6 +881,11 @@ h5 + .separator {
 .ph-20 {
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.ph-30 {
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .ph-40 {
@@ -961,12 +958,12 @@ h5 + .separator {
   margin-top: 60px;
 }
 
-.mb-10 {
-  margin-bottom: 10px;
-}
-
 .mt-20 {
   margin-top: 20px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
 }
 
 .mb-20 {
@@ -2271,7 +2268,7 @@ h5 + .separator {
 }
 
 .feature-box-2 .body {
-  margin-left: 50px;
+  margin-left: 30px;
 }
 
 .feature-box-2 .body p {
@@ -2353,8 +2350,9 @@ h5 + .separator {
   border-radius: 5px;
 }
 
-.dark-bg .bordered {
-  border: 1px solid #555555;
+.top-bordered {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .shadow *,
@@ -4238,196 +4236,6 @@ h6.media-heading {
   .full-text-container {
     position: static;
     padding: 20px !important;
-  }
-}
-
-/* Call to action
----------------------------------- */
-.call-to-action h1,
-.call-to-action a {
-  margin: 0;
-}
-
-.call-to-action p {
-  margin-bottom: 10px;
-}
-
-/* Small devices (tablets, phones less than 767px) */
-@media (max-width: 767px) {
-  .call-to-action .text-right {
-    text-align: left;
-  }
-}
-
-/* Counters
----------------------------------- */
-.counter {
-  display: block;
-  font-size: 32px;
-  line-height: 1;
-}
-
-/* Pricing tables
----------------------------------- */
-.pricing-tables {
-  margin: 60px 0 0;
-}
-
-.plan {
-  text-align: center;
-  margin-bottom: 40px !important;
-}
-
-.plan.round-corners .header {
-  -webkit-border-radius: 25px 25px 0 0;
-  -moz-border-radius: 25px 25px 0 0;
-  border-radius: 25px 25px 0 0;
-}
-
-.plan.round-corners ul li:last-child,
-.plan.round-corners ul {
-  -webkit-border-radius: 0 0 25px 25px;
-  -moz-border-radius: 0 0 25px 25px;
-  border-radius: 0 0 25px 25px;
-}
-
-.plan .header {
-  padding: 0;
-  margin: 0 -1px;
-  border: none;
-}
-
-.plan .header h3 {
-  font-size: 36px;
-  margin: 0;
-  line-height: 36px;
-  font-weight: 300;
-  padding: 15px 0 10px;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  border-top: none;
-}
-
-.plan .header .price {
-  font-size: 28px;
-  padding: 8px 0 10px;
-  font-weight: 300;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-  line-height: 1;
-  color: #ffffff;
-}
-
-.plan ul {
-  margin: 0;
-  padding: 0;
-  font-size: 14px;
-  list-style: none;
-}
-
-.plan ul li {
-  padding: 12px 0px;
-  font-size: 13px;
-  border-bottom: 1px solid #f3f3f3;
-  border-top: 1px solid #ffffff;
-  color: #333333;
-}
-
-.plan.best-value ul li {
-  padding: 15px 0;
-}
-
-.plan ul li a.pt-popover {
-  color: #000000;
-  border-bottom: 1px dashed #000000;
-  position: relative;
-}
-
-.plan ul li a.pt-popover:hover {
-  text-decoration: none;
-}
-
-.plan ul li a.pt-popover:after {
-  position: absolute;
-  top: 0px;
-  left: -15px;
-  font-family: "FontAwesome";
-  content: "\f059";
-  color: #ddd;
-  font-size: 12px;
-}
-
-.popover {
-  width: 250px;
-  font-size: 13px;
-  text-align: center;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.popover-title {
-  color: #ffffff;
-  text-shadow: none;
-  font-size: 13px;
-  border: none;
-}
-
-.popover-content {
-  font-size: 12px;
-}
-
-.circle-head .plan .header {
-  padding: 0;
-  border: none;
-  width: 160px;
-  height: 160px;
-  -webkit-border-radius: 100%;
-  -moz-border-radius: 100%;
-  border-radius: 100%;
-  margin: 20px auto;
-  padding: 10px 0;
-}
-
-.circle-head .plan .header h3 {
-  font-size: 26px;
-  border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  padding-top: 27px;
-}
-
-.circle-head .plan .header .price {
-  height: 80px;
-  border: none;
-  padding-top: 15px;
-  font-size: 22px;
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-}
-
-.stripped .plan ul {
-  -webkit-box-shadow: 0px -15px 32px 0px #cacaca inset;
-  box-shadow: 0px -15px 32px 0px #cacaca inset;
-  background: #fdfdfd;
-}
-
-.stripped .plan ul li {
-  border: 1px solid #ececec;
-  border-top: none;
-  color: #666;
-}
-
-.stripped .plan ul li:nth-child(even) {
-  -webkit-box-shadow: 0px 0px 40px #e4e4e4 inset;
-  box-shadow: 0px 0px 40px #e4e4e4 inset;
-  background: #ffffff;
-  border-right: 1px solid #e2e2e2;
-  border-bottom: 1px solid #e2e2e2;
-}
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
-  .best-value.plan {
-    top: -30px;
-    position: relative;
-    z-index: 2;
   }
 }
 
