--- a/template/css/typography.css
+++ b/template/css/typography.css
@@ -159,14 +159,14 @@ h4 {
 }
 
 h5 {
-  font-size: 15px;
-  text-transform: uppercase;
-  font-weight: 700;
+  font-size: 0.85rem;
+  font-weight: 500;
 }
 
 h6 {
-  font-size: 12px;
+  font-size: 0.7rem;
   font-weight: 400;
+  margin-top: 5px;
 }
 
 /* Small devices (tablets, 768px and up) */
