--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -50,7 +50,7 @@
     <!-- Used font for body: Roboto -->
     <!-- Used font for headings: Raleway -->
     <!-- Use css/rtl_typography-default.css for RTL version -->
-    <link href="css/typography-default.css" rel="stylesheet" >
+    <link href="css/typography.css" rel="stylesheet" >
     <!-- Color Scheme (In order to change the color scheme, replace the blue.css with the color scheme that you prefer)-->
     <link href="css/skins/green.css" rel="stylesheet">
   
