adjusts 17.03 part II

--- a/template/page-about.html
+++ b/template/page-about.html
@@ -123,7 +123,7 @@
 
                   <!-- logo -->
                   <div id="logo" class="logo">
-                    <a href="#" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
+                    <a href="index.html" target="_self"><img id="logo_img" src="images/logo-mvisia.svg" alt="Logo MVisia"></a>
                   </div>
 
                 </div>
@@ -544,7 +544,7 @@
               
             </div>         
           </div>
-        </div>
+        </section>
       <!-- section team start -->
 
       <!-- footer start -->
