--- a/template/index.html
+++ b/template/index.html
@@ -403,7 +403,7 @@
         <div class="container">
           <div class="row">
             
-            <div class="col-lg-6 order-lg-1">
+            <div class="col-lg-6 text-justify mb-30">
               <h3 class="page-title title-about">Sobre a MVisia</h3>
               <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
               <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>. Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
@@ -411,8 +411,8 @@
               <a class="btn radius-2 btn-transparent btn-hvr btn-animated btn-bordered-green" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
 
-            <div class="col-lg-6 order-lg-2">
-              <div class="bordered text-center special-container">
+            <div class="col-lg-6">
+              <div class="rounded text-center special-container">
                 <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><img class="image-alone" src="images/about-bg-image2.png" alt="mvisia-youtube-channel"></a>
               </div>
             </div>
@@ -594,7 +594,7 @@
               <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-50">Redução de custos</h3>
+                  <h3 class="card-title ml-80">Redução de custos</h3>
                 </div>
               </div>
             </div>
@@ -602,7 +602,7 @@
               <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-2.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-50">Aumento de produtividade</h3>
+                  <h3 class="card-title ml-80">Aumento de produtividade</h3>
                 </div>
               </div>
             </div>
@@ -613,7 +613,7 @@
               <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-3.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-50">Controle de qualidade</h3>
+                  <h3 class="card-title ml-80">Controle de qualidade</h3>
                 </div>
               </div>
             </div>
@@ -621,7 +621,7 @@
               <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-4.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-50">Relatórios detalhados</h3>
+                  <h3 class="card-title ml-80">Relatórios detalhados</h3>
                 </div>
               </div>
             </div>
@@ -632,7 +632,7 @@
               <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-5.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-50">Operação intuitiva</h3>
+                  <h3 class="card-title ml-80">Operação intuitiva</h3>
                 </div>
               </div>
             </div>
@@ -640,7 +640,7 @@
               <div class="feature-box-2 object-non-visible mb-20 mt-60" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                 <div class="body">
-                  <h3 class="card-title ml-50 mb-60">Assistência técnica</h3>
+                  <h3 class="card-title ml-80 mb-60">Assistência técnica</h3>
                 </div>
               </div>
             </div>
@@ -708,22 +708,26 @@
             <div class="col-md-12">
               <div class="call-to-action">
 
-                <div class="row justify-content-md-center">
-                  <div class="col-md-8">
-                    <h4 class="page-title text-center section-caller text-white mt-4">A MVisia é uma empresa 100% brasileira</h4>
-                  </div>
-                </div>
-
                   <div class="row">
-                    <div class="col-md-6">
-                      <div class="feature-box-2 object-non-visible mb-20 ml-150 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                    <div class="col-md-4">
+                      <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                        <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-7.svg"></span>
+                        <div class="body">
+                          <h3 class="card-title ml-25">A MVisia é 100% brasileira</h3>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-4">
+                      <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                         <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-1.svg"></span>
                         <div class="body">
                           <h3 class="card-title ml-25">Sem custos de importação</h3>
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-6">
+
+                    <div class="col-md-4">
                       <div class="feature-box-2 object-non-visible mb-20 mt-30" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                         <span class="icon default-bg small circle icon-benefit"><img class="icon-circle" src="images/icon-benefit-6.svg"></span>
                         <div class="body">
@@ -731,6 +735,7 @@
                         </div>
                       </div>
                     </div>
+
                   </div>
 
               </div>
@@ -926,14 +931,6 @@
     <!-- Appear javascript -->
     <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
     <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-    <!-- Count To javascript -->
-    <script type="text/javascript" src="plugins/jquery.countTo.js"></script>
-    <!-- Parallax javascript -->
-    <script src="plugins/jquery.parallax-1.1.3.js"></script>
-    <!-- Contact form -->
-    <script src="plugins/jquery.validate.js"></script>
-    <!-- Morphext -->
-    <script type="text/javascript" src="plugins/morphext/morphext.min.js"></script>
     <!-- Owl carousel javascript -->
     <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
     <!-- Pace javascript -->
