--- a/template/page-about.html
+++ b/template/page-about.html
@@ -240,12 +240,14 @@
                 <p>A empresa existe desde 2012, quando foi incubada no CIETEC-USP, e já desenvolveu soluções para os setores de <strong>hortifruti, flores e mudas florestais</strong>. Tivemos dois dos nossos projetos financiados pela FAPESP e também mantemos estreitas relações com o ecossistema de inovação, com diversos prêmios ganhos, como o <strong>Prêmio Santander de Empreendedorismo</strong> e o <strong>Prêmio Odebrecht Sustentabilidade</strong>.</p> 
               </div>
               <div class="col-lg-6">
-                <div class="owl-carousel content-slider-with-controls">
-                  <div class="overlay-container-2 overlay-visible">
-                    <img src="images/page-about-1.png" alt="Image page about slider 1">
-                  </div>
-                  <div class="overlay-container-2 overlay-visible">
-                    <img src="images/page-about-2.png" alt="Image page about slider 2">
+                <div class="special-container">
+                  <div class="owl-carousel content-slider-with-controls">
+                    <div class="overlay-container-2 overlay-visible rounded">
+                      <img src="images/page-about-1.png" alt="Image page about slider 1">
+                    </div>
+                    <div class="overlay-container-2 overlay-visible">
+                      <img src="images/page-about-2.png" alt="Image page about slider 2">
+                    </div>
                   </div>
                 </div>
               </div>
